@@ -1,3 +1,8 @@
+2011-06-29  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/tap/cable.c (urj_tap_cable_wait): Tweak code style to silence warnings
+    thrown up by gcc-4.6 and cause build failures with -Werror.
+
 2011-06-27  Jie Zhang  <jie.zhang@analog.com>
 
   * include/urjtag/Makefile.am (nodist_pkginclude_HEADERS): New and
